Revision history for mojolicious-plugin-linkedcontent


0.03_1  Thu Feb 10 14:52:06 2011
        Upgraded to Mojolicious 1.01
0.02_1  Fri Dec 10 21:21:52 2010
        CSS support
        Elements ordering fix
        Support for absolute url
        Support for absolute path

0.01_1  Wed Jan 27 18:07:19 2010
        Initial release.